<resources>
    <string name="app_name">ThoiTiet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="menu_location">Vị trí</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="menu_notify">Thông báo</string>
    <string name="menu_language">Ngôn ngữ</string>
    <string name="menu_share">Chia sẻ ứng dụng</string>
    <string name="menu_evaluate">Đánh giá ứng dụng</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>